salesforce-main/src/main/default/objects/BLND_DFCS_Carousel__c/fields/BLND_Bookmark__c.field-meta.xml
<CustomField>
    <fullName>BLND_Bookmark__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookmark</label>
    <referenceTo>BLND_DFCS_Slide__c</referenceTo>
    <relationshipLabel>Carousels</relationshipLabel>
    <relationshipName>Carousels</relationshipName>
    <type>Lookup</type>
</CustomField>